--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
                         <h2 class="s-subtitle animate delay-80 scroll-fade-up">Как мы</h2>
                         <h2 class="s-title animate delay-80 scroll-fade-up">Работаем</h2>
                         <div class="circle_yellow_small circle_double"></div>
-                        <img class="hiw-img" src="../img/hiw.png" alt="hiw">
+                        <img class="hiw-img" src="./img/hiw.png" alt="hiw">
                 </div>
                 <div class="half">
                         <ul class="hiw-steps">
